corrected styling on card and changed grid gap value on homepage

--- a/src/elements/Card/card.style.scss
+++ b/src/elements/Card/card.style.scss
@@ -1,13 +1,14 @@
 .card{
-  width: 300px;
-  height: 300px;
-  grid-gap: 20px;
+  width: 250px;
+
+
 
   &_emage-div{
     width: 100%;
     img{
       width: 100%;
-      //height: 100%;
+      height: 100%;
     }
   }
+
 }
