--- a/src/pages/Homepage/homepage.style.scss
+++ b/src/pages/Homepage/homepage.style.scss
@@ -5,6 +5,7 @@
     //grid-template-columns: 1fr 1fr 1fr 1fr;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 50px;
 
   }
 }
